Testsuite/ManualTests/2709/2709.c.lcov
    1|       |/* { dg-do compile { target { ! ia32 } } } */
    2|       |/* { dg-options "-march=haswell" } */
    3|       |
    4|       |#pragma GCC push_options
    5|       |#pragma GCC target("arch=geode") /* { dg-error "CPU you selected does not      \
    6|       |                                    support x86-64 instruction set" } */
    7|       |
    8|      1|__attribute__((constructor)) void foo() { asm(""); }
    9|       |
   10|       |#pragma GCC pop_options
   11|       |
   12|      1|int main() { return 0; }

